--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
     implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
 }
