--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:theme="@style/Theme.Unofficial_twicas_client_for_android">
         <activity
             android:name=".MovieActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:supportsPictureInPicture="true"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:launchMode="singleTask">
+        </activity>
         <activity
             android:name=".AuthorizationActivity"
             android:exported="true"
