--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
